<?xml version="1.0"?>
<package format="2">
  <name>momo</name>
  <version>1.0.0</version>
  <description>mono-motion estimation library</description>
  
  <license>LGPLv3</license>
  <maintainer email="johannes.graeter@kit.edu">Johannes Graeter</maintainer>
  <author email="johannes.graeter@kit.edu">Johannes Graeter</author>
  <url type="repository">https://gitlab.mrt.uni-karlsruhe.de/MRT/momo.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <!--test_depend>gtest</test_depend-->
  <!-- 
    Documentation for dependencies:
    <build_depend>            Build-time dependency required to build 
                              this package, e.g. boost, opencv.
    <build_export_depend>     Exported build-time dependency required to 
                              build packages that depend on this package,
                              e.g. boost, opencv.
    <exec_depend>             Execution dependency required to run this 
                              package, e.g. boost, opencv.
    <depend>                  Build-time, exported build-time and execution
                              dependency. This is a bundled synonym for
                              <build_depend>, <build_export_depend> and
                              <exec_depend>.
  -->
  <!-- 
    Example:
    <depend>mrt_opencv</depend> 
  -->

   <depend>eigen</depend> 
   <depend>mrt_ceres</depend> 
  
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
